--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
 
   <body>
     <div id="app"></div>
-    
-    <div>hghghghghghhghg</div>
+    ｆｊｄｓｊｆｌｓｋｄｊｆｌｓｄ
     <p>aaaaaaaaaaaaaaaaaaaaaaaaaa</p>
     <script src="src/index.js"></script>
   </body>
